[package]
name = "enum_to_u8_slice_derive"
version = "0.1.0"
authors = ["Yiming Jing (jingyiming@baidu.com)"]
description = "provide a simple way to convert enum to u8 slice ref"
repository = "https://github.com/kevinis/enum_to_u8_slice_derive"
license = "BSD-3-Clause"

[dependencies]
syn = "0.11.11"
quote = "0.3.15"

[lib]
proc-macro = true
