[package]
name = "enum_to_u8_slice_derive"
version = "0.1.1"
authors = ["Yiming Jing <jingyiming@baidu.com>"]
description = "A simple fork of enum_to_str_derive (by @DCjanus), convert enum to u8 slice ref"
repository = "https://github.com/mesalock-linux/enum_to_u8_slice_derive"
license = "BSD-3-Clause"

[dependencies]
syn = "0.11.11"
quote = "0.3.15"

[lib]
proc-macro = true
